<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MADPractice</string>
    <string name="action_settings">Einstellungen</string>
    <string name="hello_world">I can count !</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="bracketOpen">(</string>
    <string name="bracketClose">)</string>
    <string name="_C">C</string>
    <string name="MINUS">-</string>
    <string name="PERIOD">.</string>
    <string name="PLUS">+</string>
    <string name="MULTIPLY">*</string>
    <string name="DIVIDE">/</string>
    <string name="EQUALS">=</string>
    <string name="_0">0</string>
    <string name="SIN">sin</string>
    <string name="COS">cos</string>
    <string name="TAN">tan</string>
    <string name="SQRT">√</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="title_activity_calculator_extended">CalculatorExtended</string>
    <string name="others">Weitere</string>
    <string name="UEBUNG_1">Übung 1</string>
    <string name="UEBUNG_2">Übung 2</string>
    <string name="UEBUNG_3">Übung 3</string>
    <string name="UEBUNG_4">Übung 4</string>
    <string name="UEBUNG_5">Übung 5</string>
    <string name="UEBUNG_6">Übung 6</string>
    <string name="MONEYSAC">MoneySac</string>
    <string name="UEBUNG_7">Übung 7</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <string name="title_activity_todo_detail">TodoDetailActivity</string>
    <string name="title_activity_todo_settings">Einstellungen</string>
    <string name="newTodo">Neu</string>
    <string name="settings">Einstellungen</string>
    <string name="fontSize">Schriftgröße</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Abbrechen</string>

    <string-array name="Prios">
        <item>hoch</item>
        <item>mittel</item>
        <item>niedrig</item>
    </string-array>
    <string-array name="Kategorien">
        <item>Essen</item>
        <item>Bildung</item>
        <item>Auto</item>
        <item>Kleidung</item>
    </string-array>

    <string name="listRowTitle">Title</string>
    <string name="detailLabelDescription">Beschreibung</string>
    <string name="detailLabelTitle">Titel</string>
    <string name="preferenceTextSize">Schriftgröße</string>
    <string name="defaultPriority">hoch</string>
    <string name="defaultPriorityTitle">Vorausgewählte Priorität</string>
    <string name="deleteButtonText">Löschen</string>
    <string name="saveButtonText">Speichern</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="download">Download</string>
    <string name="labelFileUrl">File URL</string>
    <string name="DOWNLOAD_FINISHED">Download wurde abgeschlossen!</string>
    <string name="refresh">Aktualisieren</string>
    <string name="supplyUrl">Bitte eine URL angeben</string>
    <string name="DOWNLOAD_STARTED">Download wird gestartet!</string>
    <string name="FILE_SIZE_UNKNOWN">Dateigröße unbekannt</string>
    <string name="HTTP_PROBLEM">Probleme bei der HTTP-Verbindung. Überprüfen Sie bitte den Link!</string>
    <string name="READ_WRITE_ERROR">Lesen oder Schreiben der Datei war nicht möglich!</string>
    <string name="UNKNOWN_ERROR">Es ist ein unbekannter Fehler aufgetreten</string>
    <string name="calculatorsettingsactivity">CalculatorSettingsActivity</string>
    <string name="strEinnahmenHead">Einnahmen:</string>
    <string name="strAusgabenHead">Ausgaben:</string>
    <string name="strEinnahmen">Einnahmen</string>
    <string name="strAusgaben">Ausgaben</string>
    <string name="strBeides">Beides</string>
    <string name="strAddIncome">+</string>
    <string name="strAddExpense">-</string>
    <string name="strAddMonth">+</string>
    <string name="title_activity_todo_reader">TodoReaderActivity</string>
    <string name="title_activity_todo_updater">TodoUpdaterActivity</string>
    <string name="title_activity_priority_updater">PriorityUpdaterActivity</string>
    <string name="name">Name</string>
    <string name="title_activity_edit_entry">EditEntryActivity</string>
    <string name="moneysac_menu_category">Kategorien</string>
    <string name="title_activity_category_list_view">CategoryListView</string>
    <string name="title_activity_category_detail">CategoryDetailActivity</string>

</resources>