<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TodoDetailActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/detailLabelTitle"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTitle"
        android:paddingTop="10dp"
        android:text="@string/detailLabelDescription"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDesc"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="6" />

    <TextView
        android:id="@+id/textViewPrio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDesc"
        android:paddingTop="10dp"
        android:text="Priorität"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerPrio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPrio"
        android:entries="@array/Prios"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="save"
            android:text="@string/saveButtonText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="delete"
            android:text="@string/deleteButtonText"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>