<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.app.dev.moneysac.Activities.MoneySac" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/relativeLayoutSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Spinner
                android:id="@+id/spinnerMonths"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".84" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".16"
                android:onClick="showMoneySacDatePickerDialog"
                android:text="@string/strAddExpense"
                android:textSize="25sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewEntries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight=".65" />

        <LinearLayout
            android:id="@+id/linearLayoutIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".05"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewIn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/strEinnahmenHead"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewInValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="end"
                android:text="1203123,03 €"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOut"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".05"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewOut"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/strAusgabenHead"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewOutValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="end"
                android:text="67853,03 €"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <mobile.app.dev.moneysac.Helpers.SegmentedRadioGroup
            android:id="@+id/segmentedRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.1"
            android:checkedButton="@+id/segmentedRadioButtonBoth"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/segmentedRadioButtonIn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:onClick="segmentedButtonClicked"
                android:text="@string/strEinnahmen"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/button_text_color" />

            <RadioButton
                android:id="@+id/segmentedRadioButtonOut"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:button="@null"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:onClick="segmentedButtonClicked"
                android:text="@string/strAusgaben"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/button_text_color" />

            <RadioButton
                android:id="@id/segmentedRadioButtonBoth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:button="@null"
                android:gravity="center"
                android:minHeight="33dip"
                android:minWidth="40dip"
                android:onClick="segmentedButtonClicked"
                android:text="@string/strBeides"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/button_text_color" />
        </mobile.app.dev.moneysac.Helpers.SegmentedRadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            style="?android:attr/buttonBarStyle"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Button
                android:id="@+id/addIncomeButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:onClick="addIncomeClicked"
                android:text="@string/strAddIncome"
                android:textSize="35sp" />

            <Button
                android:id="@+id/addExpenseButton"
                 style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:onClick="addExpenseClicked"
                android:text="@string/strAddExpense"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>